# how2

./: .gitignore  README.md  deploy.sh  medium.md  pyproject.toml  requirements.txt  setup.py  test_questions.md
how2/: __main__.py  cli.py
how2/how_agent/: agent.py
how2/utils/: config_utils.py  ollama_utils.py
src/how/: cli.py
src/how/utils/: config_utils.py  os_utils.py
src/tests/: mlflow_test_how2.py
